--- a/css/style.css
+++ b/css/style.css
@@ -55,6 +55,8 @@ body.clipBody {
 body.clipBody #portfolio_area {
   height: 0px;
   overflow: hidden; }
+body #portfolio_area.hidden {
+  display: none; }
 
 .clearfix:after {
   content: " ";
@@ -83,6 +85,7 @@ body.clipBody #portfolio_area {
   width: 100%;
   height: auto;
   border: 0px solid red;
+  margin-left: 0px;
   margin-bottom: 0px;
   border-bottom: 1px solid rgba(0, 0, 0, 0.1);
   padding: 10px 0px 10px 15px;
@@ -114,7 +117,7 @@ body.clipBody #portfolio_area {
   display: inline-block; }
 @media only screen and (min-width: 320px) and (max-width: 480px) {
   .navigation a span {
-    padding: 12px 0px 14px 0px; } }
+    padding: 8px 0px 10px 0px; } }
 .navigation a:hover {
   background-color: rgba(0, 0, 0, 0.1); }
 .navigation a:first-child {
@@ -195,7 +198,9 @@ body.clipBody #portfolio_area {
   -webkit-transition: all 0.25s;
   -moz-transition: all 0.25s;
   -o-transition: all 0.25s;
-  transition: all 0.25s; }
+  transition: all 0.25s;
+  display: inline-block;
+  min-height: 100%; }
 .container.showing {
   margin-left: -250px; }
 
@@ -219,6 +224,13 @@ body.clipBody #portfolio_area {
   opacity: 0.7;
   -moz-opacity: 0.7;
   filter: "alpha(opacity = msamt)"; }
+.icon_holder svg {
+  display: block;
+  position: absolute;
+  width: 40px;
+  height: 40px;
+  left: 0px;
+  top: 0px; }
 .icon_holder.close {
   margin-left: -30px;
   z-index: 201; }
@@ -239,7 +251,9 @@ body.clipBody #portfolio_area {
   transform: scale(0.5);
   -ms-transform-origin: 7% 21%;
   -webkit-transform-origin: 7% 21%;
-  transform-origin: 7% 21%; }
+  transform-origin: 7% 21%;
+  left: 20%;
+  top: 25%; }
 @media only screen and (max-width: 446px), (min-width: 320px) and (max-width: 480px) {
   .icon_holder {
     background-color: rgba(0, 0, 0, 0.7);
@@ -258,7 +272,9 @@ body.clipBody #portfolio_area {
     transform: scale(0.5);
     -ms-transform-origin: 6% 12%;
     -webkit-transform-origin: 6% 12%;
-    transform-origin: 6% 12%; } }
+    transform-origin: 6% 12%;
+    left: 20%;
+    top: 18%; } }
 .icon_holder .icon .symbol {
   fill: transparent;
   stroke: black;
@@ -282,7 +298,6 @@ body.clipBody #portfolio_area {
   height: 0%;
   left: 100%;
   top: 163px;
-  display: block;
   z-index: 30;
   margin-left: 0px;
   -webkit-transition: all 0.25s;
